magic animation while drawing - implemented; fixed gap between solutions list and footer; githubRibbon and author section letter spacing and font weight changed; font size increased

--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,11 @@ body {
   background:radial-gradient(circle at 50% 50%, rgba(103, 103, 103, 1) 0%, rgb(40, 40, 40) 100%);
 }
 
+main {
+  margin-bottom: 150px;
+  font-size: 20px;
+}
+
 footer {
 position: absolute;
   bottom: 0;
