--- a/src/components/solutionAddingCard/SolutionAddingCard.scss
+++ b/src/components/solutionAddingCard/SolutionAddingCard.scss
@@ -43,6 +43,7 @@
     display: block;
     background: transparent;
     padding: 10px;
+    font-size: 20px;
     border: 2px solid #1a1c23;
     border-radius: 10px;
     margin: 2rem auto 0;
