--- a/src/components/solutionsList/SolutionsList.scss
+++ b/src/components/solutionsList/SolutionsList.scss
@@ -21,4 +21,14 @@
       }
     }
   }
+  button {
+    display: block;
+    background: transparent;
+    padding: 10px;
+    font-size: 20px;
+    border: 2px solid #1a1c23;
+    border-radius: 10px;
+    margin: 0 auto;
+    cursor: pointer;
+  }
 }
