--- a/src/modules/author/Author.scss
+++ b/src/modules/author/Author.scss
@@ -1,5 +1,6 @@
 .footer-wrapper {
   overflow: hidden;
+  margin: 0 auto;
 
   .footer {
     display: flex;
@@ -9,7 +10,8 @@
     position: relative;
     margin: 30px 0;
     width: 100vw;
-    font-size: 12px;
+    letter-spacing: 2px;
+    font-size: 14px;
     text-align: center;
 
     &.slide-in-bottom {
@@ -36,8 +38,8 @@
           transform: scale(120%);
         }
 
-        &.fa-linkedin {
-          color: #0a66c2;
+        &.fa-linkedin-in {
+          color: #4c98f1;
         }
 
         &.fa-github {
@@ -72,49 +74,6 @@
         font-size: 10px;
       }
     }
-
-    //.line {
-    //  position: absolute;
-    //  width: 35%;
-    //  height: 2px;
-    //  border-radius: 50%;
-    //  transform: translate(0, -50%);
-    //  background-image: var(--gradient-bar);
-    //  @media screen and (max-width: 1400px) {
-    //    width: 30%;
-    //  }
-    //  @media screen and (max-width: 1200px) {
-    //
-    //    width: 27%;
-    //  }
-    //  @media screen and (max-width: 992px) {
-    //
-    //    width: 25%;
-    //  }
-    //  @media screen and (max-width: 768px) {
-    //    width: 20%;
-    //  }
-    //  @media screen and (max-width: 576px) {
-    //    display: none;
-    //  }
-    //
-    //  &.left {
-    //    bottom: 35%;
-    //    left: 2%;
-    //    @media screen and (max-width: 1200px) {
-    //      left: 5%;
-    //    }
-    //  }
-    //
-    //  &.right {
-    //    bottom: 35%;
-    //    right: 2%;
-    //    background-image: var(--gradient-reverse);
-    //    @media screen and (max-width: 1200px) {
-    //      right: 5%;
-    //    }
-    //  }
-    //}
   }
 }
 
